tests/snapshots/examples_fixtures/type_system__failing__182_list_comprehension_missing_left_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected generator identifier before `<-` in list comprehension.

  --> examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx:1:15
  |
1 | let xs = [x | <- [1, 2, 3]]
  |               ^^

Hint:
  List comprehensions use `[expr | name <- source, ...]`.
== stdout ==
<not executed>
